--- a/index.html
+++ b/index.html
@@ -90,12 +90,51 @@
 			</tr>
 		</tbody>
 	</table>
-	<p><b>計算BMI:</b>
+	<p><b>
+			<a href="bmi.html" target="_blank">計算BMI:</a>
+		</b>
 		一位民眾身高160公分，體重65公斤，BMI25.4kg/m2(=65÷1.6÷1.6)，體重屬於「過重」。
 		<br>
 		<b>計算所需熱量:</b>
 		因他的工作為坐辦公室，屬輕量工作，每天攝取熱量應在1300至1625大卡之間(=20~25大卡*65公斤)。
 	</p>
+
+	<iframe width="45%" height="534" src="https://www.youtube.com/embed/MzLZXUnekuI"
+		title="健身房新手【4天練全身課表】每天只做CP值最高的三個精華動作！│健人訓練│ 2021ep31" frameborder="0"
+		allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+		allowfullscreen></iframe>
+	<iframe width="45%" height="534" src="https://www.youtube.com/embed/L1BTJsDAWjo"
+		title="7 分鐘居家徒手腹肌訓練【初級版】無裝備｜7 Min Standing Abs workout｜非常適合初學者入門也有效加强核心的訓練｜男生和女生都適合的健身訓練【健身運動】" frameborder="0"
+		allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+		allowfullscreen></iframe>
+	<video src="videos/sample-5s.mp4" controls width="80%"></video>
+	<a href="">TOP</a>
+	<hr>
+	<h2>表單填寫</h2>
+	<form action="">
+		<label for="username">姓名</label>
+		<input type="text" id="username" name="username"><br>
+		<label for="age">年齡</label>
+		<input type="number" id="age" name="age"><br>
+		<label for="password">密碼</label>
+		<input type="password" id="password" name="password"><br>
+		<input type="date" id="date" name="date">
+		<input type="color" id="color" name="color">
+
+		<p>需要更多的資訊？請填寫Email</p>
+		<label for="email">信箱：</label>
+		<input type="email" id="email2" placeholder="請輸入email" required>
+
+
+		<p>您寶貴的意見</p>
+		<textarea name="" id="" cols="30" rows="10">
+
+		</textarea>
+		<button type="submit">提交</button>
+
+	</form>
+
+
 
 
 </body>
