css設計-2(分離檔案)

--- a/index.html
+++ b/index.html
@@ -7,147 +7,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>健身網站</title>
 
-	<style>
-		body {
-			background-color: antiquewhite;
-		}
-
-		#container {
-			width: 80%;
-			margin: 24px auto;
-			text-align: center;
-		}
-
-		/*次標題設計*/
-		.sub-titles {
-			font-size: 24px;
-			font-family: 'Courier New', Courier, monospace;
-			background-color: tomato;
-
-		}
+	/*載入css檔案的樣式*/
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/index.css">
 
 
-
-		.text-1 {
-			background-color: aquamarine;
-			padding: 12px;
-
-
-		}
-
-		.text-3 {
-			text-align: left;
-			background-color: chartreuse;
-			border-radius: 12px;
-		}
-
-		.text-3 li {
-			margin-left: 24px;
-		}
-
-		#block2 {
-			width: 100%;
-			background-color: aqua;
-			text-align: center;
-			padding: 6px 0px;
-		}
-
-		#block2 img {
-			height: 300px;
-			width: 32%;
-		}
-
-		#block2-1 {
-			background-color: white;
-			padding: 4px;
-
-		}
-
-		img {
-			background-color: white;
-			padding: 6px;
-			border-radius: 3px;
-		}
-
-		/*連結的樣式設定*/
-		li a {
-			text-decoration: none;
-			color: black;
-		}
-
-		li a:hover {
-			color: blue;
-		}
-
-		li a :visited {
-			color: gray;
-		}
-
-		/*表格的樣式設定*/
-		#table-1 {
-			width: 80%;
-			margin: 0px auto;
-			height: 100px;
-			font-size: 20px;
-		}
-
-		#table-1 th {
-			background-color: darkblue;
-			color: white;
-		}
-
-		#table-1 td {
-			text-align: center;
-			background-color: aquamarine;
-		}
-
-		#table-1 td:first-child {
-			background-color: darkblue;
-			color: white;
-		}
-
-		#table-1 td:nth-child(even) {
-			background-color: rgb(139, 0, 104);
-			color: white;
-		}
-
-		/*
-		#table-1 td:nth-child(3) {
-			background-color: rgb(139, 0, 104);
-			color: white;
-		}
-		*/
-
-		.video {
-			width: 100%;
-		}
-
-		#block3 {
-			width: 80%;
-			text-align: center;
-			margin: 0px auto;
-		}
-
-		form {
-			width: 80%;
-			margin: 0 auto;
-			background-color: cornflowerblue;
-			padding: 24px 0px;
-			color: white;
-		}
-
-		button[type="submit"] {
-			background-color: chartreuse;
-			padding: 6px;
-			width: 100px;
-			border: 0px;
-
-
-		}
-	</style>
 </head>
 
 <body>
+	<a class="a-test">test1</a>
+	<a class="a-test">test2</a>
+
+
 	<div id="container">
 		<h1 style="color:deeppink;background-color:#e6e6fa;">何謂健身?</h1>
 		<div style="background-color: aquamarine;">
@@ -287,6 +158,7 @@
 
 		</textarea>
 			<button type="submit">提交</button>
+			<button type="submit">重置</button>
 
 		</form>
 
