--- a/bmi.html
+++ b/bmi.html
@@ -6,21 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>計算BMI</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/bmi.css">
+
 </head>
 
 <body>
-    <h1>BMI計算機</h1>
-    <form action="">
-        <label for="username">姓名</label>
-        <input type="text" name="username" id="username"><br>
-        <label for="height">身高</label>
-        <input type="number" name="height" id="height"><br>
-        <label for="weight">體重</label>
-        <input type="number" name="weight" id="weight"><br>
-        <button type="submit">計算</button>
+    <div id="container">
+        <div class="sub-titles">BMI計算機</div>
+        <form action="">
+            <label for="username">姓名</label>
+            <input class="test" type="text" name="username" id="username"><br>
+            <label for="height">身高</label>
+            <input class="test" type="number" name="height" id="height"><br>
+            <label for="weight">體重</label>
+            <input class="test" type="number" name="weight" id="weight"><br>
+            <button type="submit">計算</button>
 
-    </form>
-    <a href="index.html" target="_blank">回首頁</a>
+        </form>
+        <a href="index.html" target="_blank">回首頁</a>
+    </div>
+
 </body>
 
 </html>
